--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
 <body><link href='https://fonts.googleapis.com/css?family=Anton|Passion+One|PT+Sans+Caption' rel='stylesheet' type='text/css'>
     
             <!-- Error Page -->
-            
                 <div class="error-page">
                     <div>
                     <h1 data-h1="404">404</h1>
-                    <p data-p="NOT FOUND">WORK IN PROGRESS! :)
+                    <p data-p="NOT FOUND">COMING SOON! :)
                     </div>
                 </div>
                 <div id="particles-js"></div>
